--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-.btn {
+.btn-lg {
   border: 2px solid black;
   background-color: rgba(184, 40, 40, 0.699);
   color: rgb(255, 238, 0);
@@ -7,7 +7,22 @@
   width: 30%;
 }
 
+#q1 {
+  border: 2px solid black;
+  background-color: rgb(206, 206, 206);
+}
+
 .welcome {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 25vh;
+  margin: 5px;
+  padding: 0px;
+}
+
+.colors {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -23,4 +38,8 @@ body {
 
 .hidden {
   display: none;
+}
+
+#colors {
+  background-color: rgb(0, 204, 255);
 }
