--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,11 @@
   padding: 0px;
 }
 
-.colors {
+small {
+  text-align: right;
+}
+
+body {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -30,9 +34,6 @@
   min-height: 25vh;
   margin: 5px;
   padding: 0px;
-}
-
-body {
   background-color: rgb(0, 204, 255);
 }
 
