--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@
 }
 
 small {
-  text-align: right;
+  text-align: center;
 }
 
 body {
@@ -33,6 +33,7 @@ body {
   align-items: center;
   text-align: center;
   min-height: 25vh;
+  height: 100vh;
   margin: 5px;
   padding: 0px;
   background-color: rgb(0, 204, 255);
@@ -44,4 +45,28 @@ body {
 
 #colors {
   background-color: rgb(0, 204, 255);
+}
+
+
+label {
+  margin-top: 3px;
+  font-size: 115%;
+}
+label .title {
+  border-bottom: 1px solid black;
+  border-left: 1px solid black;
+}
+
+u {
+  font-weight: bold;
+}
+
+img {
+  cursor: pointer;
+  height: 150px;
+  width: 150px;
+}
+
+.form .images {
+  width: 100vw;
 }
