--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,10 @@ body {
   display: none;
 }
 
+.hidden2 {
+  display: none;
+}
+
 #colors {
   background-color: rgb(0, 204, 255);
 }
@@ -61,7 +65,8 @@ u {
   font-weight: bold;
 }
 
-img {
+[type=image] {
+  align-items: center;
   cursor: pointer;
   height: 150px;
   width: 150px;
